--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-SLACK_BOT_TOKEN=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_DYNAMODB_TABLE_NAME=
+
+SLACK_CLIENT_ID=
+SLACK_CLIENT_SECRET=
 SLACK_SIGNING_SECRET=
+SLACK_STATE_SECRET=
