--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.18.0",
     "@slack/bolt": "^3.4.0",
     "dotenv-safe": "^8.2.0"
   },
