--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "build": "tsc",
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.18.0",
@@ -19,6 +20,8 @@
     "dotenv-safe": "^8.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
