--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon src/index.ts",
+    "eslint-check": "npx eslint-config-prettier src/index.ts",
+    "lint": "eslint --ext .ts ./src",
+    "prebuild": "rimraf dist",
     "start": "node dist/index.js"
   },
   "dependencies": {
@@ -20,7 +23,17 @@
     "dotenv-safe": "^8.2.0"
   },
   "devDependencies": {
+    "@terenceodonoghue/eslint-config-base": "^1.0.9",
+    "@types/node": "^15.12.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
