--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.18.0",
     "@slack/bolt": "^3.4.0",
+    "@types/dotenv-safe": "^8.1.1",
     "dotenv-safe": "^8.2.0"
   },
   "devDependencies": {
