--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @terenceodonoghue:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=${GITHUB_NPM_TOKEN}
 package-lock=false
