--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "dotenv-safe": "^8.2.0"
   },
   "devDependencies": {
-    "@terenceodonoghue/eslint-config-base": "^1.0.9",
-    "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
+    "@types/node": "^16.3.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
